Fix footer alignment
The footer was not aligned properly, both in terms of text (it was justified to the left instead of center) and the overall box alignment (They varied in width so they got off-center)
Now they are all aligned neutral good

--- a/src/main/resources/static/styles/aboutUs.css
+++ b/src/main/resources/static/styles/aboutUs.css
@@ -174,10 +174,16 @@ html, body
     margin: 0 2vw;
 }
 
+#footer .footer-row:first-child .section
+{
+    width: 25%;
+}
+
 #footer
 {
     font-size: 18px;
     text-shadow: 0 1px 3px #000000;
+    text-align: center;
 }
 
 #footer .title
